--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,48 @@
 [profile.default]
+optimizer = true
+optimizer_runs = 200
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [
+    '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
+    "@devops=lib/foundry-devops/src/",
+]
+fs_permissions = [
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./reports" },
+]
+
+[fmt]
+single_line_statement_blocks = "multi"
+multiline_func_header = "all"
+number_underscore = "thousands"
+sort_imports = true
+# ignore = ["./script/DeployDSC.s.sol", "./script/HelperConfig.s.sol"]
+# contract_new_lines = false
+# bracket_spacing = false
+# int_types = "long"
+# line_length = 120
+# tab_width = 4
+# quote_style = "double"
+# wrap_comments = false
+
+[fuzz]
+runs = 1000
+
+[invariant]
+runs = 1000
+depth = 128
+
+# false is great for open invariant tests the try anything on any function in any order. Better for simple systems
+# true is great when using handlers that result in valid calls during tests. Better for complex systems
+fail_on_revert = true
+
+# profile settings to lower amount of fuzz and invariant runs when creating coverage reports
+# this prevents crashing that happens when using default profile above
+[profile.coverage]
+fuzz.runs = 10
+invariant.runs = 10
+invariant.depth = 10
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
