--- a/foundry.toml
+++ b/foundry.toml
@@ -5,8 +5,12 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = [
-    '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
     "@devops=lib/foundry-devops/src/",
+    "openzeppelin-contracts-06/=lib/openzeppelin-contracts-06/contracts/",
+    "openzeppelin-contracts-08/=lib/openzeppelin-contracts-08/contracts/",
+    "openzeppelin-contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/",
+    "openzeppelin-contracts-v4.6.0/=lib/openzeppelin-contracts-v4.6.0/contracts/",
+    "openzeppelin-contracts-v5.4.0/=lib/openzeppelin-contracts-v5.4.0/contracts/",
 ]
 fs_permissions = [
     { access = "read", path = "./broadcast" },
